--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
@@ -15,7 +14,7 @@
         <input type="number" id="num1" placeholder="Entre"/>
         <input type="number" id="num2" placeholder="E"/>
     </div>
-    <button id="sortear">Sortear</button>
+    <button onclick="generateNumber()" id="sortear">Sortear</button>
     </section>
 </body>
 <script src="script.js" defer></script>
